--- a/src/main/resources/templates/bread/createBreadForm.html
+++ b/src/main/resources/templates/bread/createBreadForm.html
@@ -27,7 +27,11 @@
             <input type="text" th:field="*{detail}" class="form-control"
                    placeholder="빵 설명을 입력하세요">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div >
+            <label th:for="filename">filename</label>
+            <input type="file" class="form-control" th:enctype="multipart/form-data">
+        </div>
+        <button type="submit" class="btn btn-primary">입력</button>
     </form>
     <br/>
     <div th:replace="fragments/footer :: footer" />
