--- a/src/main/resources/templates/post/createPostForm.html
+++ b/src/main/resources/templates/post/createPostForm.html
@@ -9,29 +9,22 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/breadList/create" th:object="${bread}"
-          method="post">
+    <form role="form" action="/post/create" th:object="${post}"
+          method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label th:for="title">title</label>
             <input type="text" th:field="*{title}" class="form-control"
-                   placeholder="빵 이름을 입력하세요"
+                   placeholder="게시물 제목을 입력하세요"
                    th:class="form-control">
         </div>
         <div class="form-group">
-            <label th:for="price">price</label>
-            <input type="text" th:field="*{price}" class="form-control"
-                   placeholder="빵 가격을 입력하세요">
-        </div>
-        <div class="form-group">
-            <label th:for="detail">detail</label>
-            <input type="text" th:field="*{detail}" class="form-control"
-                   placeholder="빵 설명을 입력하세요">
+            <label th:for="content">price</label>
+            <input type="text" th:field="*{content}" class="form-control"
+                   placeholder="게시물 내용을 입력하세요">
         </div>
         <div >
             <label th:for="filename">filename</label>
-            <input type="file" class="form-control" enctype="multipart/form-data"
-            name="file"
-            >
+            <input type="file" class="form-control" name="file">
         </div>
         <button type="submit" class="btn btn-primary">입력</button>
     </form>
