--- a/src/main/resources/templates/post/createPostForm.html
+++ b/src/main/resources/templates/post/createPostForm.html
@@ -23,7 +23,7 @@
                    placeholder="게시물 내용을 입력하세요">
         </div>
         <div >
-            <label th:for="filename">filename</label>
+            <label th:for="file">파일 선택</label>
             <input type="file" class="form-control" name="file">
         </div>
         <button type="submit" class="btn btn-primary">입력</button>
