--- a/src/main/resources/templates/post/new_createPostForm.html
+++ b/src/main/resources/templates/post/new_createPostForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/post.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/post.css">
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
 </div>
 <div class="h-row2 h-set">
     <div class="col1">
-        <img src="img/main-logo.png" class="main-logo">
+        <img src="../img/main-logo.png" class="main-logo">
     </div>
 </div>
 <div class="h-row3 h-set">
@@ -33,43 +33,43 @@
     <div class="col1">
         <div class="search">
             <input type="text" class="search-box">
-            <img src="img/icon-search.png" class="search-icon">
+            <img src="../img/icon-search.png" class="search-icon">
         </div>
     </div>
 </div>
 <!--Header 종료-->
+
+<!--Article nav 시작-->
 <div class="post-nav-container">
     <div class="post-nav">
         <div class="title">
             <div>빵TALK</div>
-            <img src="img/icon-rightarrow.png" class="righrarrow-img">
+            <img src="../img/icon-rightarrow.png" class="righrarrow-img">
         </div>
-        <div>
-            <input type="button" class="btn main-color" value="글쓰기">
-        </div>
-</div>
-
-</div>
-
-<div class="article-container">
-    <div class="a-row2">
-        <div class="title">제목</div>
-        <div class="likes">추천</div>
-        <div class="nickname">닉네임</div>
-        <div class="desc">최신순</div>
-    </div>
-    <div class="a-row3">
-        <div class="title">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</div>
-        <div class="likes"><img src="img/icon-likes.png" class="likes-img">84</div>
-        <div class="nickname">한화우승</div>
-        <div class="desc">2024-02-01</div>
     </div>
 </div>
+<!--Article nav 종료-->
 
+<!--Article content 시작-->
 
+<div class="post-content-container">
+    <form role="form" class="pc-form" th:object="${post}"
+          action="/post/create" method="post" enctype="multipart/form-data">
+        <div class="title">
+            <input type="text" placeholder="제목을 입력하세요" class="pc-title"
+                   th:field="*{title}">
+        </div>
+        <div class="post">
+            <textarea class="pc-post" th:field="*{content}"></textarea>
+        </div>
+        <div class="btn-pack">
+            <div><input type="file" value="파일첨부" class="pc-file"
+                        name="file"></div>
+            <div><input type="submit" value="submit" class="btn main-color"></div>
+        </div>
+    </form>
 
-<!--Article 종료-->
-
+</div>
 
 
 </body>
