--- a/src/main/resources/templates/post/new_createPostForm.html
+++ b/src/main/resources/templates/post/new_createPostForm.html
@@ -43,7 +43,7 @@
 <div class="post-nav-container">
     <div class="post-nav">
         <div class="title">
-            <div>빵TALK</div>
+            <div><a href="/post">빵TALK</a></div>
             <img src="../img/icon-rightarrow.png" class="righrarrow-img">
         </div>
     </div>
