--- a/src/main/resources/templates/post/new_postList.html
+++ b/src/main/resources/templates/post/new_postList.html
@@ -38,12 +38,11 @@
     </div>
 </div>
 <!--Header 종료-->
-
 <!--Article nav 시작-->
 <div class="post-nav-container">
     <div class="post-nav">
         <div class="title">
-            <div>빵TALK</div>
+            <div><a href="/post">빵TALK</a></div>
             <img src="../img/icon-rightarrow.png" class="righrarrow-img">
         </div>
         <div>
@@ -56,16 +55,27 @@
 <!--Article 시작-->
 <div class="article-container">
     <div class="a-row2">
+        <div class="id">#</div>
         <div class="title">제목</div>
-        <div class="likes">추천</div>
         <div class="nickname">닉네임</div>
-        <div class="desc">최신순</div>
+        <div class="date">작성일</div>
+        <div class="views">조회</div>
+        <div class="likes">추천</div>
     </div>
     <div class="a-row3" th:each="post : ${posts}">
-        <div class="title" th:text="${post.title}">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</div>
-        <div class="likes" th:text="${post.likes}"><img src="../img/icon-likes.png" class="likes-img">84</div>
+        <div class="id" th:text="${post.id}">1</div>
+        <a href="" class="title" th:text="${post.title}" th:href="@{/post/{postId} (postId=${post.id})}">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</a>
         <div class="nickname" th:text="${post.content}">한화우승</div>
-        <div class="desc" th:text="${post.createdAt}">2024-02-01</div>
+        <div class="date"
+             th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd HH:mm')}"
+        >2024-02-01</div>
+        <div class="view">
+            <div class="views" th:text="${post.view}">3,200</div>
+        </div>
+        <div class="like">
+            <img src="../img/icon-likes.png" class="likes-img">
+            <div class="likes" th:text="${post.likes}">84</div>
+        </div>
     </div>
 </div>
 <!--Article 종료-->
