--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/header.css">
@@ -11,7 +11,6 @@
   <title>Bread2U</title>
 </head>
 <body>
-
 <!--Header 시작-->
 <div class="h-row1 h-set">
   <div class="col1">
@@ -38,10 +37,8 @@
     </div>
   </div>
 </div>
-
-
-
-
+<!--Header 종료-->
+<!--Article nav 시작-->
 <div class="post-nav-container">
   <div class="post-nav">
     <div class="title">
@@ -53,94 +50,97 @@
     </div>
   </div>
 </div>
+<!--Article nav 종료-->
 
-
-<div class="post-container">
-  <div class="post-title">
-    충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요
-  </div>
-
-  <div class="post-detail">
-    <div class="comment pd">
-      <img src="../img/icon-comment.png" class="comment-img">
-      <div>8</div>
+<!--게시물 시작-->
+<div class="post-wrapper1">
+  <div class="post-container">
+    <div class="post-title" th:text="${post.title}">
+      충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요
     </div>
-    <div class="likes pd">
-      <img src="../img/icon-likes.png" class="likes-img">
-      <div>43</div>
-    </div>
-    <div class="day pd">
-      2024-01-15 01:32:54
-    </div>
-    <div class="nickname pd">
-      노잼충대인
-    </div>
-  </div>
-
-  <div class="post-content">
-    충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요 충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요 충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요
-  </div>
-  <div class="btn-pack">
-    <a href="" class="btn-edit">[수정]</a>
-    <a href="" class="btn-delete">[삭제]</a>
-  </div>
-
-</div>
-
-
-
-<div class="comment-container1">
-  <div class="comment-count">
-    댓글 8
-  </div>
-  <div class="comment-input">
-      <img src="../img/profile-img.svg" class="profile-img">
-      <form action="" method="post" name="comment">
-        <input type="text" name="content" class="ci-text">
-        <input type="submit" value="입력" class="ci-btn">
-      </form>
-  </div>
-</div>
-
-
-
-<div class="comment-container2">
-  <div class="member-detail">
-    <div class="member-img">
-      <img src="../img/profile-img.svg" class="profile-img">
-    </div>
-    <div class="member-nickname">
-      김꿈돌이에요
-    </div>
-  </div>
-  <div class="comment-content">
-    도배 작작하세요 게시판에 전세냄?
-  </div>
-  <div class="comment-detail">
-    <div class="day">
-      2024-01-15 01:35:13
-    </div>
-    <div class="detail-pack">
-      <div class="likes">
-        <a href="" class="likes-href">
-          <img src="../img/icon-heart.png" class="heart-img">
-          <div>좋아요</div>
-        </a>
+    <div class="post-detail">
+      <div class="comment pd">
+        <img src="../img/icon-comment.png" class="comment-img">
+        <div>8</div>
       </div>
-      ·
-      <div class="report">
-        <a href="">신고</a>
+      <div class="likes pd">
+        <img src="../img/icon-likes.png" class="likes-img">
+        <div>43</div>
       </div>
-      ·
-      <div class="reply">
-        <a href="">답글달기</a>
+      <div class="day pd">
+        2024-01-15 01:32:54
       </div>
+      <div class="nickname pd">
+        노잼충대인
+      </div>
+    </div>
+    <div class="post-content" th:text="${post.content}">
+      충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요 충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요 충대 정문에 굿즈샵 대신 성심당 체인점으로 바꿔주세요
+    </div>
+    <div class="btn-pack">
+      <a href=""
+         th:href="@{/post/{postId}/update (postId=${post.id})}"
+         class="btn-edit">[수정]</a>
+      <a href=""
+         th:href="@{/post/{postId}/delete (postId=${post.id})}"
+         class="btn-delete">[삭제]</a>
     </div>
   </div>
 </div>
-
-
-
-
+<!--게시물 종료-->
+<!--댓글창 정보 시작-->
+<div class="post-wrapper2">
+  <div class="comment-container1">
+    <div class="comment-count">
+      댓글 8
+    </div>
+    <div class="comment-input">
+        <img src="../img/profile-img.svg" class="profile-img">
+        <form action="" method="post" name="comment">
+          <input type="text" name="content" class="ci-text">
+          <input type="submit" value="입력" class="ci-btn">
+        </form>
+    </div>
+  </div>
+</div>
+<!--댓글창 정보 종료-->
+<!--댓글창 시작-->
+<div class="post-wrapper3">
+  <div class="comment-container2">
+    <div class="member-detail">
+      <div class="member-img">
+        <img src="../img/profile-img.svg" class="profile-img">
+      </div>
+      <div class="member-nickname">
+        김꿈돌이에요
+      </div>
+    </div>
+    <div class="comment-content">
+      도배 작작하세요 게시판에 전세냄?
+    </div>
+    <div class="comment-detail">
+      <div class="day">
+        2024-01-15 01:35:13
+      </div>
+      <div class="detail-pack">
+        <div class="likes">
+          <a href="" class="likes-href">
+            <img src="../img/icon-heart.png" class="heart-img">
+            <div>좋아요</div>
+          </a>
+        </div>
+        ·
+        <div class="report">
+          <a href="">신고</a>
+        </div>
+        ·
+        <div class="reply">
+          <a href="">답글달기</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--댓글창 종료-->
 </body>
 </html>
