--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -96,7 +96,8 @@
     </div>
     <div class="comment-input">
         <img src="../img/profile-img.svg" class="profile-img">
-        <form action="" method="post" name="comment">
+        <form th:action="@{/comment/{postId} (postId=${post.id})}"
+              method="post" name="comment">
           <input type="text" name="content" class="ci-text">
           <input type="submit" value="입력" class="ci-btn">
         </form>
@@ -106,7 +107,7 @@
 <!--댓글창 정보 종료-->
 <!--댓글창 시작-->
 <div class="post-wrapper3">
-  <div class="comment-container2">
+  <div class="comment-container2" th:each="comment : ${comments}">
     <div class="member-detail">
       <div class="member-img">
         <img src="../img/profile-img.svg" class="profile-img">
@@ -115,18 +116,19 @@
         김꿈돌이에요
       </div>
     </div>
-    <div class="comment-content">
+    <div class="comment-content" th:text="${comment.content}">
       도배 작작하세요 게시판에 전세냄?
     </div>
     <div class="comment-detail">
-      <div class="day">
+      <div class="day"
+           th:text="${#temporals.format(comment.createdAt, 'yyyy-MM-dd HH:mm:ss')}">
         2024-01-15 01:35:13
       </div>
       <div class="detail-pack">
         <div class="likes">
           <a href="" class="likes-href">
             <img src="../img/icon-heart.png" class="heart-img">
-            <div>좋아요</div>
+            <div th:text="${comment.likes}">좋아요</div>
           </a>
         </div>
         ·
