feat: post 수정 기능 추가

--- a/src/main/resources/templates/post/createPostForm.html
+++ b/src/main/resources/templates/post/createPostForm.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/post.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/post.css">
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
 </div>
 <div class="h-row2 h-set">
     <div class="col1">
-        <img src="../img/main-logo.png" class="main-logo">
+        <img src="/img/main-logo.png" class="main-logo">
     </div>
 </div>
 <div class="h-row3 h-set">
@@ -33,7 +33,7 @@
     <div class="col1">
         <div class="search">
             <input type="text" class="search-box">
-            <img src="../img/icon-search.png" class="search-icon">
+            <img src="/img/icon-search.png" class="search-icon">
         </div>
     </div>
 </div>
@@ -44,7 +44,7 @@
     <div class="post-nav">
         <div class="title">
             <div><a href="/post">빵TALK</a></div>
-            <img src="../img/icon-rightarrow.png" class="righrarrow-img">
+            <img src="/img/icon-rightarrow.png" class="righrarrow-img">
         </div>
     </div>
 </div>
