--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -62,12 +62,8 @@
 
     <div class="post-detail">
       <div class="comment pd">
-        <img src="../img/icon-comment.png" class="comment-img">
-        <div>8</div>
-      </div>
-      <div class="likes pd">
-        <img src="../img/icon-likes.png" class="likes-img">
-        <div>43</div>
+        <img src="../img/icon-view.png" class="view-img">
+        <div th:text="${post.view}">8</div>
       </div>
       <div class="day pd">
         2024-01-15 01:32:54
@@ -82,11 +78,23 @@
     </div>
 
     <div class="btn-pack">
-      <a href=""
-         th:href="@{/post/{postId}/update (postId=${post.id})}"
-         class="btn-edit">[수정]</a>
-      <button id="btn-delete"
-         class="btn-delete">[삭제]</button>
+      <div class="like-btn">
+        <a th:href="@{/post/{postId}/like (postId=${post.id})}">
+          <img src="/img/icon-like.png" class="like-icon">
+          <div th:text="${post.likes}" class="like-count">8</div>
+        </a>
+      </div>
+      <div class="bp-pack">
+        <form action="">
+          <input type="hidden" value=""
+        </form>
+        <form th:action="@{/post/{postId}/update}" th:object="${post}" method="post">
+          <input type="hidden" th:name="postId" th:value="${post.id}" />
+          <button type="submit" class="btn-edit">[수정]</button>
+        </form>
+        <button id="btn-delete"
+           class="btn-delete">[삭제]</button>
+      </div>
     </div>
   </div>
 </div>
@@ -154,12 +162,16 @@
 
 <div id="post-delete-modal" class="pd-modal-wrapper">
   <div class="modal-bg" id="modal-bg" style="display: none" >
-    modal
   </div>
   <div class="modal-wrap" id="modal-wrap"  style="display: none">
-    modal
-    modal
-    modal
+    <div class="mw-message">
+      게시물을 삭제하시겠습니까?
+    </div>
+    <div class="mw-btn-pack">
+      <a th:href="@{/post/{postId}/delete (postId=${post.id})}"
+         class="mw-yes btn">예</a>
+      <button class="mw-no btn" id="mw-no">아니요</button>
+    </div>
   </div>
 </div>
 
