--- a/src/main/resources/templates/bread/createBreadForm.html
+++ b/src/main/resources/templates/bread/createBreadForm.html
@@ -36,7 +36,7 @@
         <button type="submit" class="btn btn-primary">입력</button>
     </form>
     <br/>
-    <div th:replace="fragments/footer :: footer" />
+    <div th:replace="fragments/bodyHeader :: footer" />
 </div> <!-- /container -->
 </body>
 </html>
