--- a/src/main/resources/templates/bread/updateBreadForm.html
+++ b/src/main/resources/templates/bread/updateBreadForm.html
@@ -32,7 +32,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <br/>
-    <div th:replace="fragments/footer :: footer" />
+    <div th:replace="fragments/bodyHeader :: footer" />
 </div> <!-- /container -->
 </body>
 </html>
