--- a/src/main/resources/templates/member/memberList.html
+++ b/src/main/resources/templates/member/memberList.html
@@ -24,7 +24,7 @@
             </tbody>
         </table>
     </div>
-    <div th:replace="fragments/footer :: footer" />
+    <div th:replace="fragments/bodyHeader :: footer" />
 </div> <!-- /container -->
 </body>
 </html>
