--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -11,33 +11,7 @@
     <title>Bread2U</title>
 </head>
 <body>
-<!--Header 시작-->
-<div class="h-row1 h-set">
-    <div class="col1">
-        회원가입
-    </div>
-    <div class="col2">
-        로그인
-    </div>
-</div>
-<div class="h-row2 h-set">
-    <div class="col1">
-        <img src="../img/main-logo.png" class="main-logo">
-    </div>
-</div>
-<div class="h-row3 h-set">
-    <div class="hr3s1"><a href="/">HOME</a></div>
-    <div class="hr3s1"><a href="/breadList">베스트</a></div>
-    <div class="hr3s1">커스텀빵여행</div>
-    <div class="hr3s1 "><a href="/post">빵뮤니티</a></div>
-    <div class="col1">
-        <div class="search">
-            <input type="text" class="search-box">
-            <img src="../img/icon-search.png" class="search-icon">
-        </div>
-    </div>
-</div>
-<!--Header 종료-->
+<div th:replace="fragments/bodyHeader :: bodyHeader"/>
 <!--Article nav 시작-->
 <div class="post-nav-container">
     <div class="post-nav">
@@ -51,7 +25,6 @@
     </div>
 </div>
 <!--Article nav 종료-->
-
 <!--Article 시작-->
 <div class="article-container">
     <div class="a-row2">
