--- a/src/main/resources/templates/bread/createBreadForm.html
+++ b/src/main/resources/templates/bread/createBreadForm.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/breadList/create" th:object="${bread}"
+    <form role="form" action="/bread/create" th:object="${bread}"
           method="post">
         <div class="form-group">
             <label th:for="title">title</label>
