--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -17,7 +17,7 @@
     <div class="post-nav">
         <div class="title">
             <div><a href="/post">빵TALK</a></div>
-            <img src="../img/icon-rightarrow.png" class="righrarrow-img">
+            <img src="../images/icon-rightarrow.png" class="righrarrow-img">
         </div>
         <div>
             <a href="/post/create" class="btn main-color">글쓰기</a>
@@ -46,7 +46,7 @@
             <div class="views" th:text="${post.view}">3,200</div>
         </div>
         <div class="like">
-            <img src="../img/icon-likes.png" class="likes-img">
+            <img src="../images/icon-likes.png" class="likes-img">
             <div class="likes" th:text="${post.likes}">84</div>
         </div>
     </div>
