--- a/src/main/resources/templates/post/createPostForm.html
+++ b/src/main/resources/templates/post/createPostForm.html
@@ -19,7 +19,7 @@
     <div class="post-nav">
         <div class="title">
             <div><a href="/post">빵TALK</a></div>
-            <img src="../img/icon-rightarrow.png" class="righrarrow-img">
+            <img src="../images/icon-rightarrow.png" class="righrarrow-img">
         </div>
         <div>
             <a href="/post/create" class="btn main-color">글쓰기</a>
