--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/header.css">
@@ -42,7 +43,11 @@
     </div>
 </div>
 <!--Header 종료-->
-
+<ul sec:authorize="isAuthenticated()" class="navbar-nav">
+    <li class="nav-item">
+        <span class="nav-link" sec:authentication="principal.username"></span>
+    </li>
+</ul>
 <!--Article 시작-->
 
 <div class="a-row1">
