--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -21,11 +21,11 @@
       <div class="login-title">
         로그인
       </div>
-      <form role="form" action="/member/login-process" class="login-form col"
+      <form role="form" action="/login/process" class="login-form col"
         th:object="${member}" method="post">
         <div class="login-id">
           <input type="text" placeholder="아이디를 입력해주세요" name="memberName"
-                 class="txt" id="id-txt" th:field="*{memberName}">
+                 class="txt" id="id-txt" th:field="*{membername}">
         </div>
         <div class="login-pwd">
           <input type="password" placeholder="비밀번호를 입력해주세요" name="password"
