--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/header.css">
@@ -15,12 +14,15 @@
 <!--Header 시작-->
 <div class="h-row1 h-set">
     <div class="col1">
-        <a href="/member">
+        <a href="/member" >
             회원가입
         </a>
     </div>
     <div class="col2">
-        <a href="/member/login">
+        <a th:if="${member != null}" href="#">
+            반갑습니다~ㅋ
+        </a>
+        <a th:unless="${member != null}" href="/member/login">
             로그인
         </a>
     </div>
@@ -43,11 +45,7 @@
     </div>
 </div>
 <!--Header 종료-->
-<ul sec:authorize="isAuthenticated()" class="navbar-nav">
-    <li class="nav-item">
-        <span class="nav-link" sec:authentication="principal.username"></span>
-    </li>
-</ul>
+
 <!--Article 시작-->
 
 <div class="a-row1">
