--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -4,12 +4,15 @@
     <!--Header 시작-->
     <div class="h-row1 h-set">
         <div class="col1">
-            <a href="/member">
+            <a th:unless="${loginmember != null}" href="/member" >
                 회원가입
             </a>
         </div>
         <div class="col2">
-            <a href="/member/login">
+            <a th:if="${loginmember != null}" href="">
+                반갑습니다, <span th:text="${loginmember.nickname}"style="color:#FFB35A"></span>님!
+            </a>
+            <a th:unless="${loginmember != null}" href="/member/login">
                 로그인
             </a>
         </div>
