--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,15 +14,15 @@
 <!--Header 시작-->
 <div class="h-row1 h-set">
     <div class="col1">
-        <a href="/member" >
+        <a th:unless="${loginmember != null}" href="/member" >
             회원가입
         </a>
     </div>
     <div class="col2">
-        <a th:if="${member != null}" href="#">
-            반갑습니다~ㅋ
+        <a th:if="${loginmember != null}" href="">
+            반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
         </a>
-        <a th:unless="${member != null}" href="/member/login">
+        <a th:unless="${loginmember != null}" href="/member/login">
             로그인
         </a>
     </div>
