--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -4,15 +4,15 @@
     <!--Header 시작-->
     <div class="h-row1 h-set">
         <div class="col1">
-            <a th:unless="${loginmember != null}" href="/member" >
+            <a th:unless="${loginmember != null}" href="/members" >
                 회원가입
             </a>
         </div>
         <div class="col2">
             <a th:if="${loginmember != null}" href="">
-                반갑습니다, <span th:text="${loginmember.nickname}"style="color:#FFB35A"></span>님!
+                반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
             </a>
-            <a th:unless="${loginmember != null}" href="/member/login">
+            <a th:unless="${loginmember != null}" href="/members/login">
                 로그인
             </a>
         </div>
