--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <!--Header 시작-->
 <div class="h-row1 h-set">
     <div class="col1">
-        <a th:unless="${loginmember != null}" href="/member" >
+        <a th:unless="${loginmember != null}" href="/members" >
             회원가입
         </a>
     </div>
@@ -22,8 +22,11 @@
         <a th:if="${loginmember != null}" href="">
             반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
         </a>
-        <a th:unless="${loginmember != null}" href="/member/login">
+        <a th:unless="${loginmember != null}" href="/members/login">
             로그인
+        </a>
+        <a th:if="${loginmember != null}" href="/members/logout">
+             [로그아웃]
         </a>
     </div>
 </div>
