--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div class="footer" th:fragment="bodyHeader">
+<div class="header" th:fragment="bodyHeader">
     <!--Header 시작-->
     <div class="h-row1 h-set">
-        <div class="col1">
-            <a th:unless="${loginmember != null}" href="/members" >
+        <div class="col1"th:unless="${loginmember != null}">
+            <a href="/members" >
                 회원가입
             </a>
         </div>
+        <!--모달 창-->
+        <div class="logout-modal-wrapper dropdown">
+            <div class="logout-modal-wrap">
+                <div class="md-lg1">
+                    <img src="/images/icon-logout.png" class="icon-logout">
+                    <a href="/members/logout" class="md-lg2">로그아웃</a>
+                </div>
+                <div class="md-lg3">
+                    <img src="/images/icon-setting.png" class="icon-setting">
+                    <a href="/members/logout" class="md-lg2">설정</a>
+                </div>
+            </div>
+        </div>
+        <!--모달창 종료-->
         <div class="col2">
-            <a th:if="${loginmember != null}" href="">
+            <button th:if="${loginmember != null}" class="login-member" onclick="popUp()">
                 반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
-            </a>
+            </button>
             <a th:unless="${loginmember != null}" href="/members/login">
                 로그인
             </a>
@@ -35,4 +49,5 @@
         </div>
     </div>
     <!--Header 종료-->
+
 </div>
