--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,55 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/index.css">
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <!--js-->
+    <script defer src="/js/header.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Title</title>
 </head>
 <body>
 <!--Header 시작-->
-<div class="h-row1 h-set">
-    <div class="col1">
-        <a th:unless="${loginmember != null}" href="/members" >
-            회원가입
-        </a>
-    </div>
-    <div class="col2">
-        <a th:if="${loginmember != null}" href="">
-            반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
-        </a>
-        <a th:unless="${loginmember != null}" href="/members/login">
-            로그인
-        </a>
-        <a th:if="${loginmember != null}" href="/members/logout">
-             [로그아웃]
-        </a>
-    </div>
-</div>
-<div class="h-row2 h-set">
-    <div class="col1">
-        <img src="images/main-logo.png" class="main-logo">
-    </div>
-</div>
-<div class="h-row3 h-set">
-    <div class="hr3s1"><a href="/">HOME</a></div>
-    <div class="hr3s1"><a href="/breadList">베스트</a></div>
-    <div class="hr3s1">커스텀빵여행</div>
-    <div class="hr3s1 "><a href="/post">빵뮤니티</a></div>
-    <div class="col1">
-        <div class="search">
-            <input type="text" class="search-box">
-            <img src="images/icon-search.png" class="search-icon">
-        </div>
-    </div>
-</div>
-<!--Header 종료-->
-
+<div th:replace="fragments/bodyHeader :: bodyHeader"/>
 <!--Article 시작-->
-
 <div class="a-row1">
     <div class="col1">
         <img src="images/dageon-map.png" class="map-img">
