refactor: 특정 게시물 조회시에 로그인이 안된 회원들은 접근이 불가한 오류 수정

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -61,13 +61,13 @@ body{
 }
 
 .login-member{
-    width: 171px;
     background-color: transparent;
     border: 0px;
     font-size: 18px;
     text-align: right;
     padding: 0px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 /*모달*/
@@ -75,8 +75,7 @@ body{
     margin: 0;
     z-index: 1000;
     position: relative;
-    left: 171px;
-    top: 36px;
+    left: 945px;
     border: 1px solid;
     border-radius: 3px;
     width: 104px;
@@ -84,7 +83,9 @@ body{
     display: none;
     height: 77px;
 }
-
+.logout-modal-row{
+    height: 0px;
+}
 .logout-modal-wrapper .modal-bg{
 
 }
